--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     </div>
     <div class="hero"></div>
     <div class="content">
+
 <!--Search engine optimization card--> 
       <section class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left" 
+          alt="Seo notebook on desk with laptop"
         />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -42,7 +44,8 @@
           visibility and find the right customers for your business.
         </p>
       </section>
-<!--Search engine optimization card--> 
+
+<!--online-reputation-management card--> 
       <section
         id="online-reputation-management"
         class="online-reputation-management"
@@ -50,6 +53,7 @@
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
+          alt="Laptop with a graph showing rising Reputation"
         />
         <h2>Online Reputation Management</h2>
         <p>
@@ -60,12 +64,15 @@
           business.
         </p>
       </section>
+
+      <!--social-media-marketing card--> 
       <section
        id="social-media-marketing" 
            class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
+          alt="Conference table showing words related to social media engagement "
         />
         <h2>Social Media Marketing</h2>
         <p>
@@ -76,31 +83,40 @@
         </p>
       </section>
     </div>
+
+    <!--Bnefits/right hand card section--> 
     <div class="benefits">
-      <div class="benefit-lead">
+      <section class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png"
+        alt="Gear icon going through a funnel to create income"
+        />
+             
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
-      <div class="benefit-brand">
+      </section>
+      <section class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png"
+        alt="Light bulb in a suit showing waves coming from the bulb symbolizing reach and searching"
+        />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
-      <div class="benefit-cost">
+      </section>
+      <section class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png"
+        alt="Gear icon behind 3 coins showing dollar signs but symbolizing income in general"
+        />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
+      </section>
     </div>
     <div class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
