Updated footer to h3, added <footer>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 <!--page header--> 
     <div class="header">
-      <h1><span class="seo">Horiseon</span></h1>
+      <h1 tabindex="1"><span class="seo">Horiseon</span></h1>
       <div>
         <ul>
           <li>
@@ -30,7 +30,12 @@
     <div class="content">
 
 <!--Search engine optimization card--> 
-      <section class="search-engine-optimization">
+<!--fixed jump to section feature --> 
+
+      <section 
+      id ="search-engine-optimization"
+      class="search-engine-optimization"
+      >
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left" 
@@ -118,9 +123,9 @@
         </p>
       </section>
     </div>
-    <div class="footer">
-      <h2>Made with ❤️️ by Horiseon</h2>
+    <footer class="footer">
+      <h3>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
