--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>Horiseon</title>
   </head>
 
   <body>
 <!--page header--> 
-    <div class="header">
-      <h1 tabindex="1"><span class="seo">Horiseon</span></h1>
+<!--div to nav changed for semantics--> 
+    <nav class="header">
+      <h1>Hori<span class="seo">seon</span></h1>
       <div>
         <ul>
           <li>
@@ -25,7 +26,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </nav>
     <div class="hero"></div>
     <div class="content">
 
@@ -72,8 +73,9 @@
 
       <!--social-media-marketing card--> 
       <section
-       id="social-media-marketing" 
-           class="social-media-marketing">
+
+        id="social-media-marketing" 
+        class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
@@ -89,13 +91,14 @@
       </section>
     </div>
 
-    <!--Bnefits/right hand card section--> 
-    <div class="benefits">
+    <!--Benefits/right hand card section--> 
+    <!--aside used to meet semantic layout --> 
+    <aside class="benefits">
       <section class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png"
         alt="Gear icon going through a funnel to create income"
-        />
+        />  
              
         <p>
           Inbound strategies for lead generation require less work for your
@@ -122,10 +125,13 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </section>
-    </div>
+    </aside>
+<!--"footer display hidden, to match brief for now"-->
     <footer class="footer">
       <h3>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
   </body>
 </html>
+
+<!--changed div to footer, changed footer to h3 for seo -->
