changed sections back to divs on aside, condendsed css to be much smaller, re added footer

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!--Benefits/right hand card section--> 
     <!--aside used to meet semantic layout --> 
     <aside class="benefits">
-      <section class="benefit-lead">
+      <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png"
         alt="Gear icon going through a funnel to create income"
@@ -105,8 +105,8 @@
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </section>
-      <section class="benefit-brand">
+      </div>
+      <div class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png"
         alt="Light bulb in a suit showing waves coming from the bulb symbolizing reach and searching"
@@ -115,8 +115,8 @@
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </section>
-      <section class="benefit-cost">
+      </div>
+      <div class="benefit-cost">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png"
         alt="Gear icon behind 3 coins showing dollar signs but symbolizing income in general"
@@ -125,10 +125,10 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </section>
+      </div>
     </aside>
-<!--"footer display hidden, to match brief for now"-->
-    <footer class="footer">
+<!--foot is missing in brief but I've added it here as it seemed strange to"-->
+    <footer
       <h3>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
